# minutebots-public

./: .clang-format  .gitignore  .gitmodules  .hgignore  CMakeLists.txt  InstallPackages  Makefile  README.md  srtr_output.json
documentation/radio/: profile_9003.xpro
experimental/custom_routes/: generate_routes.py  generate_starts.py  route0.txt  route1.txt  route10.txt  route4.txt  route6.txt  route7.txt  route8.txt  route9.txt
scripts/: check_copyright.sh  commit.sh  cpplint.py  flat_kick_tuner.py  format.sh  generate_dss_images.sh  generate_ports.sh  histogram_timings.py  killallstack.sh  latency.py  lint_modified.sh  liveplot.m  loop_gdb.sh  loop_soccer.sh  loop_unit_tests.sh  loop_viewer.sh  luacheck_config  mem_check  pretxnchangegroup.sh  ptop.sh  push.sh  setroute.sh  simulator_positions.txt  test.gdb  test_full_loop.sh  valgrind_forward_backward.sh  valgrind_stp.sh  valgrind_unit_tests.sh  visualize_motion.py
scripts/matlab/: Model_Learning_Main.m  VisualizeTSOCSProblem.m  process_tsocs_failures.m
scripts/python/: CalculatePRMPerformance.py  CalculateRRTPerformance.py  CoeficcientEstimation.py  FilterByRow.py  GenerateTSOCSProbSet.py  HistogramDSS.py  PRMTestRigAnalysis.py  PRMTestRigDroppedData.py  PRMTestRigRandomAnalysis.py  PlotTimings.py  ProtoVisualizePath.py  ProtoVisualizePathOnly.py  ProtoVisualizePathPointObstacles.py  ProtoVisualizeSearchTree.py  StackPerformancePlot.py  VisualizePRMEdges.py  VisualizePRMPath.py  VisualizePRMSetup.py  VisualizeSimulatorStates.py  VisualizeSmoothPath.py  VisualizeStaticTangents.py  calculate_klatency.py  oscillation_plotting.py
scripts/srtr/: all_params.txt  gen_kick_tests.sh  num.txt  slurm_test_params.sbatch  test_default_params.sh  test_full_attacker.sh  test_full_attacker_medium.sh  test_full_attacker_small.sh  test_goalie.sh  test_params.sh  tests.json
scripts/valgrind/: unittests.supp
scripts/verify_state_machines/: brute_force.py
src/algorithms/: branch_and_bound.h
src/configs/: attacker_config.json  default_config.json  initial_state.json  kick_curve_id_0.txt  kick_curve_id_1.txt  kick_curve_id_2.txt  kick_curve_id_3.txt  kick_curve_id_4.txt  kick_curve_id_5.txt  kick_curve_id_6.txt  kick_curve_id_7.txt  kick_curve_id_8.txt  saved_config.json  simple_deflect_config.json  simple_intercept_config.json
src/configuration_reader/: config_triangle.cfg  lua_script.cc  lua_script.h  reader.cc  reader.h
src/constants/: constants.cc  constants.cfg  constants.h  includes.h  typedefs.h
src/datastructures/: better_map.h  bounded_queue.h  dense_array.h  lookup_table.h  pointer_comparator.h  radixheap.h  transacted_multi_vector_priority_queue.h  transacted_vector_priority_queue.h  updateable_priority_queue.h  vector_priority_queue.h
src/debugging/: debugging_tester.cc  tactic_exception.h
src/deflection_sim/: attacker_test.cc  deflection_sim_main.cc  deflection_test.cc  docking_test.cc  networkhandler.cc  networkhandler.h  sim_tester.cc  worldstate.cc  worldstate.h
src/evaluators/: defense_evaluation.cc  defense_evaluation.h  field_visualizer.cc  field_visualizer.h  offense_evaluation.cc  offense_evaluation.h  passing_evaluation.cc  passing_evaluation.h  penalty_recieve_evaluation.cc  penalty_recieve_evaluation.h  stopped_evaluation.cc  stopped_evaluation.h
src/experimental_sim/: experimental_sim.cc  experimental_sim.h  networkhandler.cc  networkhandler.h  sim_main.cc  sim_motion_model.cc  sim_motion_model.h  sim_state.cc  sim_state.h  simulator.cc  simulator.h  simulator_tester.cc
src/graph/: edge.cc  edge.h  fastmultigraph.cc  fastmultigraph.h  graph.cc  graph.h  graph_util.cc  graph_util.h  vertex.cc  vertex.h
src/gui/: drawing_helpers.cc  drawing_helpers.h  gltext.cc  gltext.h  graph.cc  graph.h  opengl_helpers.cc  opengl_helpers.h  soccerview.cc  soccerview.h  soccerview_tester.cc  test_view_callback.cc  text_tree_viewer.cc  text_tree_viewer.h  text_tree_viewer_tester.cc  triangle_integration_viewer.cc  view_function.h  viewer.cc  viewer.h  viewer_main.cc  viewer_main.h  viewer_motion.cc  viewer_motion.h  viewer_state.cc  viewer_state.h
src/hardware/: motor_controller_graph.cc
src/joystick/: joystick.cc  joystick.h  joystick_driver.cc  joystick_referee_driver.cc
src/logging/: episode_logger_main.cc  logger.cc  logger.h  navigation_logger.cc  navigation_logger.h  score_episode_logger.cc  score_episode_logger.h
src/magic_debugging/: dreal_testing.cpp  evaluation_testing.cpp  factor_tuning.cc  generate_brass_corrections.cpp  srtr_brass.cpp  trace_from_log.cpp  tuning_sketch.cpp
src/motion_control/: CollectTSOCSdata.cc  angular_planner.cc  angular_planner.h  ball_interception.cc  ball_interception.h  ball_interception2.cc  ball_interception2.h  deflection_controller.cc  deflection_controller.h  kinematic_model.cc  kinematic_model.h  motion_control_structures.h  motion_model.h  ntoc_2d.cc  ntoc_2d.h  optimal_control_1d.cc  optimal_control_1d.h  stability_data_generator.cc  sub_optimal_controls.cc  sub_optimal_controls.h  test_intercept_convergence.cc  tsocs.cc  tsocs.h  tsocs_alt.cc  tsocs_alt.h  tsocs_old.cc  tsocs_old.h  tsocs_templates.h
src/navigation/: PRM.cc  PRM.h  RRT.cc  RRT.h  eight_grid.cc  eight_grid.h  lazy_PRM.cc  lazy_PRM.h  navigation.cc  navigation.h  navigation_tester.cc  navigation_util.cc  navigation_util.h  static_tangent_planner.cc  static_tangent_planner.h  stox_planner.cc  stox_planner.h
src/net/: message_passing.h  netraw.cc  netraw.h  netraw_tester.cc  netraw_tester_large.cc
src/obstacles/: ball_obstacle.cc  ball_obstacle.h  circle_obstacle.cc  circle_obstacle.h  integer_bounding_box.cc  integer_bounding_box.h  obstacle.cc  obstacle.h  obstacle_flag.cc  obstacle_flag.h  obstacle_type.h  rectangle_obstacle.cc  rectangle_obstacle.h  robot_obstacle.cc  robot_obstacle.h  safety_margin.cc  safety_margin.h
src/open_loop_executors/: ball_reader.cc  ball_reader.h  camera_reader.cc  camera_reader.h  chip_kick_tuner_main.cc  flat_kick_tuner_main.cc  open_loop_joystick.cc  open_loop_joystick.h  open_loop_joystick_main.cc  ramp_controller.cc  ramp_controller.h  (+4 more)
(+817 files in other folders)
